<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_gravity="center"
    android:gravity="center"
    android:orientation="vertical"
    tools:context=".controller.LoginActivity">

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="279dp"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:layout_alignParentTop="true"
            android:scaleType="centerInside"
            android:contentDescription="Decorative background image."
            android:src="@drawable/pattern_for_app_theme" />

        <RelativeLayout
        android:layout_width="300sp"
        android:layout_height="match_parent"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:orientation="vertical">

                <TextView
                    android:id="@+id/email_textView"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_alignParentLeft="true"
                    android:layout_alignParentStart="true"
                    android:layout_alignParentTop="true"
                    android:layout_marginTop="180dp"
                    android:text="email"
                    android:textColor="@color/secondary"
                    android:textSize="20sp"
                    android:textStyle="bold" />

                <EditText
                    android:id="@+id/email"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_alignParentLeft="true"
                    android:layout_alignParentStart="true"
                    android:layout_alignParentTop="true"
                    android:layout_marginTop="210dp"
                    android:ems="10"
                    android:hint="email"
                    android:inputType="textEmailAddress"
                    tools:ignore="TextFields" />

        <TextView
            android:id="@+id/password-textView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:layout_alignParentTop="true"
            android:layout_centerVertical="true"
            android:text="@string/password"
            android:textColor="@color/secondary"
            android:layout_marginTop="280dp"
            android:textSize="20sp"
            android:textStyle="bold" />

        <EditText
            android:id="@+id/password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:layout_alignParentTop="true"
            android:layout_marginTop="310dp"
            android:ems="10"
            android:hint="@string/password"
            android:inputType="textPassword" />

        <Button
            android:id="@+id/login_button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:layout_alignParentTop="true"
            android:layout_marginTop = "390dp"
            android:background="@drawable/round_button"
            android:onClick="login"
            android:text="@string/login"
            android:textAllCaps="false"
            android:textColor="@android:color/white"
            android:textSize="20sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/no_account"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:layout_marginBottom="30dp"
            android:text="@string/don_t_have_an_account"
            android:textColor="@color/bodyText"
            android:textSize="15sp"
            android:textStyle="bold" />

        <Button
            android:id="@+id/register_Button"
            android:layout_width="100dp"
            android:layout_height="wrap_content"
            android:layout_alignBaseline="@+id/no_account"
            android:layout_alignParentEnd="true"
            android:layout_marginEnd="15dp"
            android:background="@android:color/transparent"
            android:gravity="start|center_vertical"
            android:onClick="switchToRegister"
            android:text="@string/register_here"
            android:textAllCaps="false"
            android:textColor="@color/primary"
            android:textSize="15sp"
            android:layout_marginRight="34dp"
            android:layout_alignParentRight="true" />

        <ImageView
            android:id="@+id/imageView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:contentDescription="Logo"
            android:layout_alignParentStart="true"
            android:layout_alignParentTop="true"
            android:layout_marginTop="34dp"
            app:srcCompat="@drawable/doughnation_img"
            android:layout_alignParentLeft="true" />

    </RelativeLayout>

</RelativeLayout>