<resources>
    <string name="app_name">DoughNation</string>
    <string name="title_activity_home_page">HomePageActivity</string>
    <string name="password">password</string>
    <string name="login">Login</string>
    <string name="don_t_have_an_account">Don\'t have an account?</string>
    <string name="register_here">Register here</string>
    <string name="logout">Logout</string>
    <string name="donation_details">DONATION DETAILS:</string>
    <string name="timestamp_xx_xx">TimeStamp: XX:XX</string>
    <string name="location_here_is_an_example">Location: here is an example</string>
    <string name="value_xx_xx">Value: $XX.XX</string>
    <string name="category_put_category_here">Category: put category here</string>
    <string name="don_desc">Put description here.</string>
    <string name="new_donation">NEW DONATION</string>
    <string name="location">Location:</string>
    <string name="title">Title:</string>
    <string name="write_title_here">Write title here.</string>
    <string name="value">Value:</string>
    <string name="enter_value">Enter value here. Ex; 24.50</string>
    <string name="type">Type:</string>
    <string name="description">Description:</string>
    <string name="donation_description_here">Donation Description here.</string>
    <string name="add">Add</string>
    <string name="back">Back</string>
</resources>
